- Added further functionality to the /teama teleport command - Teleport all teams home, teleport everyone in a team to a given location etc. - Credit EarthCow (#550, #534)
- Added the ability to /teama purge a team's balance as well as score (#521)
- Added pages to help messages and hover command suggestions (#310 #374)
- Added support for clickable invite messages (#423)
- Added support for banning color codes in /team color (#414)

Improvements:
- Replaced %s with {0}, {1} etc. in messages.yml for clearer usage and support for reordering of placeholders - Credit EarthCow (#551, #169)
- Support translation of command arguments (#553)
- Support the translation of admin commands
- Color player names in /team info based on if they are online (#469)


4.9.1:

Improvements: 
- Improved /teama version output

Bug Fixes:
- Fixed offline players not being targeted for /teama leave - Credit EarthCow (#557)
- Fixed /team help not showing any commands when the player is not op (#564)
- Removed missed debug output

4.9.2

Improvements:
- Added support for caching results for static placeholders to improve server load (#482)
- File name now includes version number - Credit ItzSave (#573)

Bug Fixes:
- Fixed Bug causing vanished players to be shown as online in /team info and /team invite - Credit Hellinduction (#567, #525)
- Improved error message when team chest claim data is invalid (#587)
- Improved error message when there is a plugin conflict in the tab menu (#587)
- Fixed translated commands not being shown in the help menu (#584)
- Added additional option to ensure autopurge does not activate accidentally (#574)

4.9.3:

Bug Fixes:
- Removed output missed in the last update that was spamming consoles
- Fixed issue where PromoteCommands were not working as expected (#591)
- Fixed issue with the update link pasted in the console (#598)


Headings: 
Features: 

Improvements:

Bug Fixes: 
