@@ -804,6 +804,7 @@ Bug Fixes:
 - Removed output missed in the last update that was spamming consoles
 - Fixed issue where PromoteCommands were not working as expected (#591)
 - Fixed issue with the update link pasted in the console (#598)
+- Fixed issue not allowing /teama money to have decimal amounts (#599)
 
 
 Headings: 
